tests/__fixtures__/fail/en/single-quotes.php
<?php declare(strict_types=1);

return [
    'foo_bar' => 'foo bar',
];
